--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
+        android:name=".MainApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -11,15 +12,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GithubApiApp"
-        tools:targetApi="31">
+        tools:targetApi="34">
         <activity
-            android:name=".feature.popular.presentation.MainActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.GithubApiApp">
-
-        </activity>
-        <activity android:name="com.kelvin.githubapiapp.feature.popular.presentation.splash.SplashScreenActivity"
+            android:name=".feature.home.presentation.HomeActivity"
+            android:exported="true" />
+        <activity
+            android:name=".feature.splash.presentation.SplashScreenActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
