--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,8 @@ material = "1.6.6"
 retrofit = "2.9.0"
 loggingInterceptor = "4.11.0"
 room = "2.6.1"
+navCompose = "2.7.1"
+coilCompose = "2.6.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -31,6 +33,7 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material = { group = "androidx.compose.material", name = "material", version.ref = "material" }
+androidx-nav-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref="navCompose" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hiltcompiler" }
 androidx-hilt-compiler = { group = "androidx.hilt", name = "hilt-compiler", version.ref = "androidxhiltcompiler" }
@@ -43,6 +46,7 @@ okhttp-interceptor = { group = "com.squareup.okhttp3", name = "logging-intercept
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
+async-image = { group = "io.coil-kt", name = "coil-compose", version.ref = "coilCompose" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
