- add favorite page - add User Detail screen - init UI Test Setup

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,8 +15,10 @@ material = "1.6.6"
 retrofit = "2.9.0"
 loggingInterceptor = "4.11.0"
 room = "2.6.1"
+roomPersistance = "1.1.1"
 navCompose = "2.7.1"
 coilCompose = "2.6.0"
+androidHiltTest = "2.29-alpha"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -46,7 +48,10 @@ okhttp-interceptor = { group = "com.squareup.okhttp3", name = "logging-intercept
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
+room-persistance = { group = "android.arch.persistence.room", name = "compiler", version.ref = "roomPersistance" }
 async-image = { group = "io.coil-kt", name = "coil-compose", version.ref = "coilCompose" }
+android-hilt-test = { group = "com.google.dagger", name = "hilt-android-testing", version.ref = "androidHiltTest" }
+room-test = { group = "androidx.room", name = "room-testing", version.ref = "room" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
